# recall

./: .envrc  .gitignore  CLAUDE.md  LICENSE  PLAN.md  README.md  RELEASE.md  SPEC.md  lefthook.yml  pyproject.toml
.claude/: codex-review.local.md
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml
skills/recall/: CLI_REFERENCE.md  EXAMPLES.md  SKILL.md
tests/: conftest.py  test_release_metadata.py
tests/fixtures/claude_code/: session1.jsonl
tests/fixtures/codex/session1/: rollout.jsonl
tests/fixtures/codex/session2/: rollout-2024-01-16T12-00-00-abc123.jsonl
tests/fixtures/codex/session3/: rollout-2024-01-17T12-00-00-shellcmd.jsonl
tests/fixtures/pi_agent/: session1.jsonl
tests/test_cli/: test_cli_smoke.py
tests/test_parsers/: test_claude_code.py  test_codex.py  test_pi_agent.py
tests/test_services/: test_indexer.py
